<resources>
    <!--    <string name="app_name">Splitz</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Dashboard</string>
    <string name="welcomeSlog">Balance</string>
    <string name="newExpSlog">$_</string>
    <string name="addExpButto">Add an expense</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="login">Login</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">register_activity</string>
    <string name="app_name" translatable="false">Splitz</string>
    <string name="default_web_client_id" translatable="false">123.apps.googleusercontent.com</string>
    <string name="please_click_back_again_to_exit" translatable="false">Please Wait</string>

</resources>